--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,12 +20,12 @@
     </header>
     <main>
         <section id="banner">
-            <h2>Welcome to our Car Store!</h2>
-            <img id="car-image" src="car_onix_white.png" alt="Car">
-            <p>Price: <span id="car-price">R$ 50.000,00</span></p>
-            <p>Model: <span id="car-name">Onix</span></p>
-            <label for="car-color">Choose a color:</label>
-            <select id="car-color" onchange="changeCarColor()">
+            <h2>Bem-Vindo a sua loja de carros!</h2>
+            <img id="carro-imagem" src="car_onix_white.png" alt="Car">
+            <p>Price: <span id="carro-preco">R$ 50.000,00</span></p>
+            <p>Model: <span id="carro-nome">Onix</span></p>
+            <label for="carro-cor">Choose a color:</label>
+            <select id="carro-cor" onchange="changeCarColor()">
                 <option value="white">Branco</option>
                 <option value="blue">Azul</option>
                 <option value="black">Preto</option>
