--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav class="sidebar close">
             <header>
                 <div class="image-text">
-                    <div class="text header-text">
-                        <span class="store">Loja</span>
-                        <span class="name">Carro</span>
+                    <div class="text header-text" id="cart">
+                        <h2>Carrinho de Compras</h2>
+                        <ul id="cart-items"></ul>
                     </div>
                     <div class="text-menu">
                         <li class="search-box">
@@ -28,7 +28,9 @@
                             </div>
                             <span class="mode-text text">Dark Mode</span>
                             <div class="toggle-switch">
-                                <span class="switch"></span>
+                                <span class="switch">
+                                    
+                                </span>
                             </div>
                         </li>
                     </div>
