--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <nav class="sidebar close">
             <header>
                 <div class="image-text">
-                    <div class="text header-text" id="cart">
-                        <h2>Carrinho de Compras</h2>
-                        <ul id="cart-items"></ul>
+                    <div class="text header-text" >
                     </div>
                     <div class="text-menu">
                         <li class="search-box">
@@ -29,14 +27,18 @@
                             <span class="mode-text text">Dark Mode</span>
                             <div class="toggle-switch">
                                 <span class="switch">
-                                    
                                 </span>
                             </div>
                         </li>
                     </div>
                 </div>
                 <i class="fa-solid fa-chevron-right toggle"></i>
-            </header>
+                <div class="menu" id="cart">
+                    <h2>Carrinho de Compras</h2>
+                    <ul id="cart-items">
+                  
+                    </ul>
+               </div>
         </nav>
     </header>
     <main>
