--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             </section>
             <section class="modeloinfo">
                 <h2>Bem-Vindo à Nossa Loja de Carros!</h2>
-                <img id="carro-imagem" src="car_onix_white.png" alt="Car">
-                <p>Preço: <span id="carro-preco">R$ 50.000,00</span></p>
-                <p>Modelo: <span id="carro-nome">Onix</span></p>
+                <img id="carro-imagem" src="imagem_padrao.png" alt="Car">
+                <p>Preço: <span id="carro-preco"></span></p>
+                <p>Modelo: <span id="carro-nome">Seu Novo Carro</span></p>
             </section>
             <section class="modeloCar">
                 
