--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
             </section>
             <section class="modeloinfo">
                 <h2>Bem-Vindo à Nossa Loja de Carros!</h2>
-                <img id="carro-imagem" src="imagem_padrao.png" alt="Car">
-                <p>Preço: <span id="carro-preco"></span></p>
-                <p>Modelo: <span id="carro-nome">Seu Novo Carro</span></p>
+                <section class="loading-spinner" id="loading-spinner"></section>
+                <div id="carro-detalhes">
+                    <img id="carro-imagem" src="imagem_padrao.png" alt="Car">
+                    <p>Preço: <span id="carro-preco"></span></p>
+                    <p>Modelo: <span id="carro-nome">Seu Novo Carro</span></p>
+                </div>
             </section>
             <section class="modeloCar">
                 
